--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
+    "gsap": "^3.12.5",
     "phaser": "^3.80.1",
     "phavuer": "^0.15.6",
     "vue": "^3.4.21"
